# AMD-writeup

./: CMakeLists.txt  README.md
benchmarks/: plot_results.py  run_benchmarks.cpp
docs/: ANALYSIS.md
include/: matrix_utils.hpp
src/cpu/: cpu_matmul.cpp
src/naive/: naive_matmul.cpp
src/optimized/: optimized_matmul.cpp
src/tiled/: tiled_matmul.cpp
